--- a/Connect_ManuallyCuratedData_with_SIGCOMMData.ipynb
+++ b/Connect_ManuallyCuratedData_with_SIGCOMMData.ipynb
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "db5OWjADFiRS",
         "colab": {
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "ZzEGbwy7HMxs"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
         },
         "outputId": "5eef026e-1b5e-401f-afe6-ea9793b41ebf"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
         },
         "outputId": "6a691889-edac-499a-f94c-601ef0700340"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +240,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Adding columns to dfFinal (original) dataframe by comparing it with dfResearcher dataframe based on the full name of a committee member and a fuzzy match. Another column is used for the gender-guesser library which guesses the gender for every SIGCOMM member in dfSigcomm.\n",
+        "Adding columns to dfSigcomm (original) dataframe by comparing it with dfResearcher dataframe based on the full name of a committee member and a fuzzy match. Another column is used for the gender-guesser library which guesses the gender for every SIGCOMM member in dfSigcomm.\n",
         "Additionally, for all the committee members whose continent of location could not be determined, it will check if the dfResearcher has these names with their regions and add it in accordingly."
       ],
       "metadata": {
@@ -305,7 +305,7 @@
         },
         "outputId": "130e6a45-91d4-4312-b73a-f9c4dd9a072d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +360,7 @@
       "metadata": {
         "id": "Q24-ire1eCur"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "id": "6GYR5NThhqL6",
         "outputId": "5921115f-eff2-44f0-99f4-0db66cf84b87"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,7 +492,7 @@
       "metadata": {
         "id": "fwBGuCSWHBiA"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
